# training-AWS-SAM-address-cleansing

./: .gitignore  bld_dply.sh  delete_stack.sh  prod.env  pyproject.toml  start_local.sh  template_template.yaml  update_swaggerhub.sh
.devcontainer/: Dockerfile  devcontainer.json
src/addrgen/: app.py
swagger/: openapi.yaml
tests/: aws_request.http
