[tool.poetry]
name = "address-cleansing-demo"
version = "0.1.0"
description = "Cleanse the address and output a JSON List"
authors = ["Steve Zheng <steve.zheng@gmail.com>"]
readme = "README.md"
packages = [
    {include = "addrgen", from= "src"},
    {include = "auth", from= "src"},
    {include = "cleansing", from= "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.25"
pytest = "^7.4.0"
openai = "^0.27.8"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
